Updating figures, global benefit caluclations, metalog distributions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(cba_GplusD_LongTermPot_CurrentGS_epsilon)
 export(draw_tornados_global)
 export(draw_tornados_national)
 export(graph_BCR)
+export(graph_BCR_directional_uncertainty)
 export(graph_BCR_uncertainty)
 export(graph_benefit)
 export(graph_cost)
