--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,13 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 URL: https://github.com/conservationresearch-laurakeating/newSpeciesPrioritization
 BugReports: https://github.com/conservationresearch-laurakeating/newSpeciesPrioritization/issues
 Imports: 
     dplyr, ggplot2, rmetalog, data.table
 Depends: 
     R (>= 2.10)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
