--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ RoxygenNote: 7.2.1
 URL: https://github.com/conservationresearch-laurakeating/newSpeciesPrioritization
 BugReports: https://github.com/conservationresearch-laurakeating/newSpeciesPrioritization/issues
 Imports: 
-    dplyr, ggplot2, rmetalog, data.table
+    dplyr, ggplot2, rmetalog, data.table, ggrepel, gtable, gridExtra, data.table
 Depends: 
     R (>= 2.10)
 Suggests: 
